templates/g5_helium/custom/scss/global.scss
/* ... */
.xclsform {
  table button {
    border: none !important;
  }

  .panel-body button i {
    margin: 0 !important;
  }
}

.table-hover tbody tr:hover td,
.table-hover tbody tr:nth-child(2n):hover > td{
  background: #EDEDED !important;
}

.table-hover tbody tr:nth-child(2n) > td,
.table-hover tbody tr:nth-child(2n) > th {
  background: var(--neutral-200) !important;
}

.table-hover tbody tr:nth-child(2n) > td .sticker .circle {
  background-color: var(--neutral-200);
}

.table-hover tbody tr,
.table-hover tbody tr {
  a {
    color: var(--night-blue);

    span.icon-edit {
      color: var(--em-profile-color);
    }
  }
}

.files-board .table-hover thead th:hover {
  background-color: var(--neutral-100);
  cursor: pointer;
}

/* NEW STYLE */
.view-list .fabrikFilterContainer .table.filtertable .fabrik_filter_container .input-append {
  button.btn.calendarbutton {
    height: 40px;
    border-radius: 0 4px 4px 0 !important;
    background: var(--neutral-0);
    color: var(--neutral-900);
    border: 1px solid #e0e0e5;

    &:hover {
      background: var(--neutral-100);
    }
  }
  input[id*="range"].fabrik_filter {
    border-radius: 4px 0 0 4px !important;
  }

}

/* OLD STYLE */
.view-list .table .fabrikFilterContainer .fabrikDateListFilterRange button.btn.calendarbutton {
  height: 40px;
  border-radius: 0 4px 4px 0 !important;
  background: var(--neutral-0);
  color: var(--neutral-900);
  border: 1px solid #e0e0e5;

  &:hover {
    background: var(--neutral-100);
  }
}

.gantry.view-list #g-container-main .g-container .page-header h1 {
  margin-bottom: 8px;
}

.page-intro * {
  width: 80%;
}

.view-list .page-header-container {
  position: fixed;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  background: var(--em-coordinator-bg);
  top: 72px;
  box-shadow: var(--em-box-shadow-x-1) var(--em-box-shadow-y-1) var(--em-box-shadow-blur-1) var(--em-box-shadow-color-1), var(--em-box-shadow-x-2) var(--em-box-shadow-y-2) var(--em-box-shadow-blur-2) var(--em-box-shadow-color-2), var(--em-box-shadow-x-3) var(--em-box-shadow-y-3) var(--em-box-shadow-blur-3) var(--em-box-shadow-color-3);
  left: 75px;
  padding: 24px 33px 24px 33px;
  min-height: 86px;
  z-index: 10;
}

.gantry.view-list .dropdown-menu > li > a:hover,
.gantry.view-list .dropdown-menu > li > a:focus,
.gantry.view-list .dropdown-submenu:hover > a,
.gantry.view-list .dropdown-submenu:focus > a {
  background: var(--main-500);
}

.gantry.view-list .modal-header .closeFabWin .icon-cancel.icon-remove-sign {
  color: var(--red-500);
}

.gantry.view-list .modal .itemContentPadder #csvmsg .alert {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;

  h3 {
    margin-bottom: 24px;
  }

  .btn.btn-success {
    background: var(--main-500);
    border: 1px solid var(--main-500);
    font-size: var(--em-coordinator-font-size);
    text-decoration: none;

    &:hover, &:focus, &:active {
      text-decoration: none;
      background: var(--neutral-0);
      border: 1px solid var(--main-500) !important;
      font-size: var(--em-coordinator-font-size);
      color: var(--main-500);
    }
  }
}

.view-list #g-container-main .g-container {
  padding: 0 32px;
}

.row .span3 {
  display: flex;
  align-items: center;
}

.row-striped .row {
  width: 100%;
}

#g-offcanvas a:hover {
  color: var(--neutral-0);
  text-decoration: none;
}

.gantry.view-list:not(.g-back-office-emundus-tableau) #g-container-main {
  padding-left: 76px;
}

.view-list:not(.g-back-office-emundus-tableau) #g-container-main .g-container {
  position: relative;
  width: 100%;
}

.view-list, .g-back-office-emundus-tableau {
  h1,
  h2,
  h3:not(.panel-title),
  h4,
  h5,
  h6 {
    color: var(--em-coordinator-title-color);
  }
}

.view-list.com_fabrik .table tbody tr .modal .modal-footer a.btn {
  color: var(--neutral-0);
  text-transform: initial;

  &:hover, &:focus, &:active {
    color: var(--em-primary-color);
  }
}

.view-list{
  .page-intro * {
    color: var(--neutral-700);
  }
}

.view-list .dropdown-menu > li {
  padding: 4px;
  a:not(.edit-button-user):not(.logout-button-user) {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    color: var(--neutral-900);
    background: var(--transparent) !important;

    &:hover {
      text-decoration: none;
    }
  }

  &:hover {
    background: var(--neutral-300) !important;
  }

  &.selected.active {
    background: var(--neutral-300) !important;
  }
}

.view-list .list-footer span.add-on {
  background: #eeeeee;
}

.nav .dropdown-toggle .caret {
  border-top-color: var(--night-blue);
  border-bottom-color: var(--night-blue);
}

// remove
.fabrikNav .pagination-list li {
  margin: 0;
}

.fabrikNav .pagination-list li a {
  color: var(--neutral-800);
}

.fabrikNav .list-footer .limit .input-prepend.input-append {
  display: flex;
  width: fit-content;
  gap: 6px;
  height: 40px;

  small {
    color: #353544;
  }

  select {
    color: var(--neutral-800);
    background-color: transparent;
  }

  select:focus {
    outline: none;
    background-color: transparent;
  }
}

.pagination > .disabled > span {
  height: 30px;
}


/* VIEW DETAILS  */

.view-details .fabrikGroup h3.legend {
  margin-top: 24px !important;
  margin-bottom: 16px !important;
}


#sidebar-a .em-send-button a.btn.btn-success.btn-xs {
  color: var(--neutral-0);
  background: var(--em-primary-color);
  border-color: var(--em-primary-color);

  &:hover, &:active, &:focus {
    color: var(--em-primary-color);
    background: transparent;
    border-color: var(--em-primary-color);
  }
}
/* ... */

